Format cite shortcodes and add back in previous small fixes

--- a/content/1-history/5.md
+++ b/content/1-history/5.md
@@ -15,7 +15,7 @@ abstract: "The paper outlines the contribution of the Neapolitan tradition to th
 
 ## Introduction
 
-The intention of this paper is to outline the important contributions made by the Neapolitan tradition of structural conservation of paintings on canvas, the history of which remains little known. Knowledge of this tradition has increased over the past twenty years thanks to studies that have brought to light many documents presented during two conferences held in the Capodimonte Museum in 1999 and 2007 (see [[Catalano and Prisco 2003]] and {% cite 'D’Alconzo 2007' %}. These studies made it possible to compare elements from the examination of the paintings themselves, elucidating the contents of the documents and allowing an understanding of the methods employed.
+The intention of this paper is to outline the important contributions made by the Neapolitan tradition of structural conservation of paintings on canvas, the history of which remains little known. Knowledge of this tradition has increased over the past twenty years thanks to studies that have brought to light many documents presented during two conferences held in the Capodimonte Museum in 1999 and 2007 (see {% cite 'Catalano and Prisco 2003' %} and {% cite 'D’Alconzo 2007' %}. These studies made it possible to compare elements from the examination of the paintings themselves, elucidating the contents of the documents and allowing an understanding of the methods employed.
 
 A number of interesting elements were thus brought to light, such as the distinction—as early as the eighteenth century—between the “artistic” operations of cleaning and retouching and those of lining/consolidation, which were entrusted to the “liner” rather than the “restorer.” The studies highlighted the existence in the eighteenth century of diverse practices in the museums, often limited to cautious interventions, together with an awareness of the specificity of the materials involved. Traditionally, animal glue and flour paste were almost exclusively the materials employed to consolidate the paint layers and line the canvases throughout the period under consideration.
 
@@ -25,21 +25,21 @@ These studies also identified the presence of certain “professionals” who sp
 
 The history of the profession of *foderatore* (liner) in Naples sits at the intersection of craft, art, and profession, and it is here where the definition of the discipline of conservation-restoration unfolds.
 
-In 1960, Raffaello Causa—the renowned art historian who in the 1970s and ’80s would direct the *soprintendenza* for the Historical and Artistic Heritage of Naples, and who at that time headed the restoration laboratory of the Capodimonte Museum, highlighted this aspect by observing how in our city the conservation of paintings on canvas had been guaranteed by means of “an indisputable skill—and we would like to say a reckless ease—with which the lining of the canvases was performed here in Naples, an operation widely practiced by local restorers” ([[Causa 1960' '10' %}).
+In 1960, Raffaello Causa—the renowned art historian who in the 1970s and ’80s would direct the *soprintendenza* for the Historical and Artistic Heritage of Naples, and who at that time headed the restoration laboratory of the Capodimonte Museum, highlighted this aspect by observing how in our city the conservation of paintings on canvas had been guaranteed by means of “an indisputable skill—and we would like to say a reckless ease—with which the lining of the canvases was performed here in Naples, an operation widely practiced by local restorers” ({% cite 'Causa 1960' '10' %}).
 
 In fact, it is possible since at least the eighteenth century to trace the evidence and documents relating to the practice of *rintelaggio* or *foderatura:* the consolidation of deteriorated textile supports carried out by gluing these onto a new canvas. We also find that such activities were carried out early on by a particular figure, the *telaiolo,*[^1] or manufacturer of canvases for painting, who would also repair damaged canvases if required.
 
 One of these craftsmen was Giuseppe Maria Ranzenò, known as il Filosofo (the Philosopher), who as early as 1726 was paid for “*due tele imprimate*” (two primed canvases) ({% cite 'Pavone 1994' '140' %}). In 1740, he supplied some cases of canvas to the Reale Arazzeria, established by Charles of Bourbon, which produced many splendid tapestries for the royal residences ({% cite 'Siniscalco 1979' '278' %}). The Arazzeria was based in Via San Carlo alle Mortelle, together with the Pietre Dure laboratory, in the same location where the Art Academy would soon be born.
 
-Other testimonies regarding the activity of the Arazzeria between 1761 and 1768 clarify the specificity of Ranzenò's profession. This information is found in a collection of documents published in 1979 as part of a campaign of wide-ranging research aimed at reconstructing the various and multifaceted artistic activities of the eighteenth century, thanks to a group of historians whose scholarship would come together to give rise to the great *Civiltà del Settecento a Napoli* exhibition in Naples (December 1979–October 1980) ([[N. Spinosa 1979]]; [[*Civiltà del ’700 a Napoli* 1980]]).
+Other testimonies regarding the activity of the Arazzeria between 1761 and 1768 clarify the specificity of Ranzenò's profession. This information is found in a collection of documents published in 1979 as part of a campaign of wide-ranging research aimed at reconstructing the various and multifaceted artistic activities of the eighteenth century, thanks to a group of historians whose scholarship would come together to give rise to the great *Civiltà del Settecento a Napoli* exhibition in Naples (December 1979–October 1980) ({% cite 'N. Spinosa 1979' %}; {% cite '*Civiltà del ’700 a Napoli* 1980' %}).
 
 In the Reale Arazzeria, several painters, including Girolamo Storace, Giuseppe Bonito, and Orlando Filippini, were engaged to create oil paintings that served as a guide to tapestry weaving ([fig. 5.1a](#fig-5-1)) and ([fig. 5.1b](#fig-5-1)). Giuseppe Maria Ranzenò supplied them with prepared canvases on which to make their models, and for this reason in the documents he is called “*mesticatore*” ({% cite 'Siniscalco 1979' '282' %}), from *mestica*, the mixture with which the canvases were prepared for painting. But we also find him at work in other activities closely related to those of the painters active for the Arazzeria, which he assisted with all aspects relating to the preparation of the supports.
 
 {% figure 'fig-5-1' %}
 
-A payment note dated 1763 describes the variety of these supplies. It refers to a “canvas for painting made by Giuseppe Maria Ranzenò called the Philosopher, ordered by the Court Painter D. Giuseppe Bonito to make the frieze of the tapestry by the painter Filippini,” and the canvas is described as, “with its good stretcher with the crossbar, prepared with priming the color of lead white” ([[A. Spinosa 1979, 382]]).
+A payment note dated 1763 describes the variety of these supplies. It refers to a “canvas for painting made by Giuseppe Maria Ranzenò called the Philosopher, ordered by the Court Painter D. Giuseppe Bonito to make the frieze of the tapestry by the painter Filippini,” and the canvas is described as, “with its good stretcher with the crossbar, prepared with priming the color of lead white” ({% cite 'A. Spinosa 1979' '382' %}).
 
-A real restoration is then described of two old *modelli* for the frieze. Orlando Filippini was in charge of painting the patterns for the floral friezes that adorned the tapestries, the main “stories” of which were then entrusted to Bonito. Indeed, in 1768, the same Ranzenò would still declare he had supplied Filippini with the canvases on which to paint “the flowers for the friezes” ([[A. Spinosa 1979, 383]]). Evidently, sometimes these oil paintings that served as *modelli* for the friezes were reused, and this explains the restoration of the “old *modello* for the frieze” mentioned in the note of 1762: “It has been lined with a single piece of fine canvas and it has been filled in many areas having first flattened it on a larger stretcher; then it was attached to its own stretcher that was in the Arazzeria” ([[A. Spinosa 1979, 382]]).
+A real restoration is then described of two old *modelli* for the frieze. Orlando Filippini was in charge of painting the patterns for the floral friezes that adorned the tapestries, the main “stories” of which were then entrusted to Bonito. Indeed, in 1768, the same Ranzenò would still declare he had supplied Filippini with the canvases on which to paint “the flowers for the friezes” ({% cite 'A. Spinosa 1979' '383' %}). Evidently, sometimes these oil paintings that served as *modelli* for the friezes were reused, and this explains the restoration of the “old *modello* for the frieze” mentioned in the note of 1762: “It has been lined with a single piece of fine canvas and it has been filled in many areas having first flattened it on a larger stretcher; then it was attached to its own stretcher that was in the Arazzeria” ({% cite 'A. Spinosa 1979' '382' %}).
 
 The lining procedure is described here with details rarely found in the sources. The document indicates the type of canvas used: “*fina*” (fine, or thin) and “a single piece” (that is, without seams). It describes the use of a stretcher that we would now call temporary: larger than the original one, prepared specifically for the lining procedure. And it tells us that the lined painting was then placed back on its original stretcher.
 
@@ -59,13 +59,13 @@ In contrast to the assessment of the *accomodamento*, the artistic restoration, 
 
 A distinct intermediate activity was therefore taking shape—if not conservation, exactly, perhaps adjusting or repairing—a field of action somewhere between lining and artistic restoration in which both Ranzenò and his collaborator Senzapaura—the latter also called the Philosopher in his turn—were involved. Between 1762 and 1775, the two were engaged in the restoration of the copper paintings by Domenichino, Ribera, and Stanzione in the Cappella del Tesoro of San Gennaro in Naples Cathedral. The restoration of the paintings on copper would have included a cleaning but also probably consolidation of the flaking layers of paint, a consistently recurring conservation problem throughout the history of the numerous interventions on the seven great altarpieces (see {% cite 'Cerasuolo 2010' '113' %}).
 
-A few years later we see the emergence of the *telaiolo* Pasquale Chiariello, the first exponent of a family of restorers whose names we meet over a very broad span of time, from the late eighteenth to the second half of the twentieth century. In 1796, the latter supplied prepared canvases to the painter Tischbein: “Six *tele impresse* were delivered by the *telajolo* Pasquale Chiariello to the Director of the Royal Academy of Painting, D. Guglielmo Tischbein, to paint figures on them” ({% cite 'Cerasuolo 2007' '29' %}). From that date until almost to our own times, the activity of the Chiariello family as manufacturers of canvases and as liners unfolds seamlessly. From 1826 to 1828 we find repeated references to the “*foderatori Raffaele e Antonio Chiariello*” engaged in work for the preparation of the Real Museo Borbonico ([[Catalano 2007]]).
+A few years later we see the emergence of the *telaiolo* Pasquale Chiariello, the first exponent of a family of restorers whose names we meet over a very broad span of time, from the late eighteenth to the second half of the twentieth century. In 1796, the latter supplied prepared canvases to the painter Tischbein: “Six *tele impresse* were delivered by the *telajolo* Pasquale Chiariello to the Director of the Royal Academy of Painting, D. Guglielmo Tischbein, to paint figures on them” ({% cite 'Cerasuolo 2007' '29' %}). From that date until almost to our own times, the activity of the Chiariello family as manufacturers of canvases and as liners unfolds seamlessly. From 1826 to 1828 we find repeated references to the “*foderatori Raffaele e Antonio Chiariello*” engaged in work for the preparation of the Real Museo Borbonico ({% cite 'Catalano 2007' %}).
 
-In the 1820s, in the preparation for the opening of the museum in the rooms of Palazzo degli Studi (the current Museo Archeologico Nazionale di Napoli), an intense campaign of restorations was undertaken, for which many important documents have survived, such as notes drawn up in order to estimate the necessary expenses ([[D’Alconzo 2003]]). For the “canvas paintings of the Neapolitan School” a summary table lists the paintings (thirty-two works, including ones by Jusepe de Ribera, Luca Giordano, Salvator Rosa, and Aniello Falcone), and links them over three columns to the list of operations envisaged: “*Foderatura e tutt’altro occorre al completo*” (Lining and anything else is needed in full), “*Spianatura a colla e rassetto in telaro*” (Glue leveling and rearrangement on the stretcher), “*Telari a zeppe*” (Stretchers with wedges)[^6] (see {% cite 'Cerasuolo 2008' '28' %}).
+In the 1820s, in the preparation for the opening of the museum in the rooms of Palazzo degli Studi (the current Museo Archeologico Nazionale di Napoli), an intense campaign of restorations was undertaken, for which many important documents have survived, such as notes drawn up in order to estimate the necessary expenses ({% cite 'D’Alconzo 2003' %}). For the “canvas paintings of the Neapolitan School” a summary table lists the paintings (thirty-two works, including ones by Jusepe de Ribera, Luca Giordano, Salvator Rosa, and Aniello Falcone), and links them over three columns to the list of operations envisaged: “*Foderatura e tutt’altro occorre al completo*” (Lining and anything else is needed in full), “*Spianatura a colla e rassetto in telaro*” (Glue leveling and rearrangement on the stretcher), “*Telari a zeppe*” (Stretchers with wedges)[^6] (see {% cite 'Cerasuolo 2008' '28' %}).
 
 The operations described in the first two columns are obviously alternatives. In fact, in less serious cases, in place of the lining, only the *spianatura* operation would be performed. From other documents we can better understand what this “flattening” consisted of: the consolidation of the paint layers carried out by applying animal glue—the “strong glue” traditionally used for this purpose and also used for the lining—on the reverse of the canvas, without removing the painting from the stretcher, and then ironing it in this way.
 
-The application on a new stretcher, “*a* *zeppe*”—that is, with triangular wedges that allow the canvas to be put back under tension—is almost systematically proposed for lined paintings but could occasionally also be carried out for those subjected to “flattening” only[^7] (see {% cite 'Cerasuolo 2008' '28' %}).
+The application on a new stretcher, “*a zeppe*”—that is, with triangular wedges that allow the canvas to be put back under tension—is almost systematically proposed for lined paintings but could occasionally also be carried out for those subjected to “flattening” only[^7] (see {% cite 'Cerasuolo 2008' '28' %}).
 
 For example, an expense report, for the treatment of Ribera’s *Drunken Silenus*, describes the operation as follows: “flattening from the front of the painting, glue on the back, stretched onto the new frame and fully adjusted.”[^8]
 
@@ -91,7 +91,7 @@ In this context, the social elevation of the “craftsman Chiariello” suggests
 
 Francesco was evidently proud of these medals, so much so that in a plea presented to the king to claim his rights as “manufacturer of canvas for painting, and liner of paintings”[^9] he cited the entire text praising him that lay behind his award from the Reale Istituto d’Incoraggiamento. In his plea he asked to be named “Foderatore del Real Museo Borbonico” and claimed as his right—“acquired with great labor”—the exercise of the profession of liner. He also complained that “often restorers”—clearly those who dealt with “artistic” restoration—“allow themselves, to the detriment of art, to put onto canvas paintings that should by rights have been handed to the petitioner.” In addition to the services already offered to the Real Museo, he cited as a credential the “large silver medal” won in the public exhibition.
 
-Francesco Chiariello’s familiarity and friendship with Neapolitan artists—foremost among these Domenico Morelli and Giuseppe Palizzi—will be testified to, at a much later date, by the certificates his son Pasquale obtained in order to promote the elevation in his social status. This enterprising son, in fact, succeeded in obtaining a further prestigious award from King Vittorio Emanuele III in 1901: the concession to “display the Royal Crest on the sign of his studio,” which together with the medals won in public exhibitions will prominently feature on his letterhead (see ([fig. 5.3](#fig-5-3))).
+Francesco Chiariello’s familiarity and friendship with Neapolitan artists—foremost among these Domenico Morelli and Giuseppe Palizzi—will be testified to, at a much later date, by the certificates his son Pasquale obtained in order to promote the elevation in his social status. This enterprising son, in fact, succeeded in obtaining a further prestigious award from King Vittorio Emanuele III in 1901: the concession to “display the Royal Crest on the sign of his studio,” which together with the medals won in public exhibitions will prominently feature on his letterhead (see [fig. 5.3](#fig-5-3)).
 
 {% figure 'fig-5-3' %}
 
@@ -103,7 +103,7 @@ The emphasis is therefore placed on a direct relationship between the guarantee 
 
 ## Knowledge of Materials and Careful Interventions
 
-To great expertise in the practice of lining, Neapolitan liners added a profound knowledge of the materials of painting, which during the nineteenth century advised extreme caution in interventions. We have found evidence—both material and documentary—of interesting interventions in the case of two glue-tempera paintings: Parmigianino’s *Holy Family,* and Bertoja’s *Virgin and Child* ([figs. 5.4](#fig-5-4) and [5.5](#fig-5-5)), respectively) ([[Cardinali et al. 2002]]). Both interventions are notable in their sensitive attention to the behavior of the materials involved. In these two beautiful canvases, the rare qualities provided by the medium have been preserved thanks to the care taken, which ensured their good conservation, and which is still effective today.
+To great expertise in the practice of lining, Neapolitan liners added a profound knowledge of the materials of painting, which during the nineteenth century advised extreme caution in interventions. We have found evidence—both material and documentary—of interesting interventions in the case of two glue-tempera paintings: Parmigianino’s *Holy Family,* and Bertoja’s *Virgin and Child* ([figs. 5.4](#fig-5-4) and [5.5](#fig-5-5)), respectively) ({% cite 'Cardinali et al. 2002' %}). Both interventions are notable in their sensitive attention to the behavior of the materials involved. In these two beautiful canvases, the rare qualities provided by the medium have been preserved thanks to the care taken, which ensured their good conservation, and which is still effective today.
 
 {% figuregroup '2' 'fig-5-4, fig-5-5' %}
 
@@ -115,17 +115,17 @@ The examination of the paintings revealed that the canvases of the Bertoja and o
 
 The edges of the canvases were fixed with strips of wood nailed along the perimeter to the stretcher and then wrapped with a glued paper. The stretchers, from different and unspecified periods—that of the Parmigianino is older and could be original—are of the fixed type.
 
-Glue-tempera makes colors look soft and light and is easily spoiled by the application of varnish or oily materials. In fact, glue, although relatively strong as a binder, does not form a continuous, even film on the surface, which therefore is quite porous. As a result, the colors once dried appear lighter and less saturated than when wet (see {% cite 'Cerasuolo 2017' '220–30' %}; [[Cerasuolo 2019]]).
+Glue-tempera makes colors look soft and light and is easily spoiled by the application of varnish or oily materials. In fact, glue, although relatively strong as a binder, does not form a continuous, even film on the surface, which therefore is quite porous. As a result, the colors once dried appear lighter and less saturated than when wet (see {% cite 'Cerasuolo 2017' '220–30' %}; {% cite 'Cerasuolo 2019' %}).
 
-A conscious and attentive protective intervention driven by the same care was taken with the two *Tüchlein* by Bruegel, which were placed under the glass as a preventive measure, rejecting the choice of more invasive interventions so as not to distort the optical qualities of the medium (see {% cite 'Cerasuolo 2017' '220–30' %}; [[Cerasuolo 2019]]).
+A conscious and attentive protective intervention driven by the same care was taken with the two *Tüchlein* by Bruegel, which were placed under the glass as a preventive measure, rejecting the choice of more invasive interventions so as not to distort the optical qualities of the medium (see {% cite 'Cerasuolo 2017' '220–30' %}; {% cite 'Cerasuolo 2019' %}).
 
-The documents testify to a remarkable awareness of the conservation problems posed by these works, which resulted in efforts of a purely conservative nature, thus avoiding the risks entailed by intrusive interventions. In 1846, Camillo Guerra, a professor of painting, wrote to the director of the museum reporting on the poor condition of the two Bruegels. In an 1847 document in reference to one of the two paintings, he wrote that “as it is painted in glue-tempera it is more easily subject to deterioration.” On May 13, 1853, the Commissione dei Restauri (the commission of artists who supervised restorations at the Museum) took the decision “to put behind glass the two tempera paintings by Pieter Bruegel, which are kept in the Dutch school” (see [[Cerasuolo 2019]]).
+The documents testify to a remarkable awareness of the conservation problems posed by these works, which resulted in efforts of a purely conservative nature, thus avoiding the risks entailed by intrusive interventions. In 1846, Camillo Guerra, a professor of painting, wrote to the director of the museum reporting on the poor condition of the two Bruegels. In an 1847 document in reference to one of the two paintings, he wrote that “as it is painted in glue-tempera it is more easily subject to deterioration.” On May 13, 1853, the Commissione dei Restauri (the commission of artists who supervised restorations at the Museum) took the decision “to put behind glass the two tempera paintings by Pieter Bruegel, which are kept in the Dutch school” (see {% cite 'Cerasuolo 2019' %}).
 
 ## The Transfer: Ancient Testimonies and Dangerous Practices
 
 Another important aspect of the caution shown by the museum administration concerns the practice of transfer, which was consciously avoided in the nineteenth century in the Museo Borbonico thanks to the awareness of its dangers. We find a clear testimony of this in a document dated 1810: Michele Arditi strongly opposed Paolino Girgenti, who wanted to transfer the *Strage degli Innocenti* by Andrea Vaccaro, in order to eliminate the imperfection caused by the seam joining the two pieces of canvas ({% cite 'D’Alconzo and Prisco 2005' '84' %}).
 
-The practice of transfer was carried out very early in Naples, since at least the eighteenth century. In 1742, Bernardo De Dominici recounted the skill of two Neapolitan artists, Nicolò di Simone and Alessandro Majello, who specialized in the transfer of flaking paintings on panel onto canvas supports ([[De Dominici \[1742–43\] 2003–14\|, 796, 994]], cited in {% cite 'Conti 2007' '140' %}).
+The practice of transfer was carried out very early in Naples, since at least the eighteenth century. In 1742, Bernardo De Dominici recounted the skill of two Neapolitan artists, Nicolò di Simone and Alessandro Majello, who specialized in the transfer of flaking paintings on panel onto canvas supports ({% cite 'De Dominici (1742–43) 2003–14' '796, 994' 'De Dominici [1742–43] 2003–14' %}, cited in {% cite 'Conti 2007' '140' %}).
 
 The restoration of a painting by Fedele Fischetti, *Noli Me Tangere*, from the church of Santa Caterina da Siena ([fig. 5.7a](#fig-5-7)), in 1998,[^13] enabled us to examine a material example of a partial transfer procedure, probably carried out by the artist himself during the execution of the painting, which can be traced back to 1766–1767. There are documents that refer to Fischetti’s activity as a restorer ({% cite 'Nappi 1984' '320' %}), but in this case it was possible to verify the procedure carried out long ago directly on a painting.
 
@@ -147,7 +147,7 @@ In the first half of the twentieth century, Pasquale Chiariello and his sons Umb
 
 Finally, in the second half of the twentieth century, improvements to traditional lining techniques with *colla pasta* (glue paste) were developed by Antonio De Mata ({% cite 'Cerasuolo 2008' '40–42' %}).[^14] De Mata personally took care of the lining and the cleaning and restoration. In his vision, structural conservation was not a subordinate phase but together with the other phases of conservation/restoration contributed to the aesthetic recovery of the materiality of a work. He developed a temporary stretcher with adjustable tie-rods that allowed a canvas’s tension to be controlled by loosening and tightening as necessary. He also devised a procedure for the preventive consolidation of paintings on canvas. After freeing the surface from dust and foreign matter, animal glue was gradually applied on the back, in several stages, if necessary, keeping the canvas fixed at the edges. This procedure, which was completed by ironing the painting from the back, reduced the risks of humidity and allowed the improvement of the surface of the paint film without damaging its material qualities.
 
-The procedure is particularly suitable for solving the conservation problems of Neapolitan paintings on canvas of the seventeenth and eighteenth centuries, with their thick, rigid preparation layers. Indeed, the animal glues and flour—materials that have always been used for preparing canvases before applying the oil ground and the oil-bound paint layers (see {% cite 'Cerasuolo 2017' '240–41' %}; [[Véliz 1982, 50–51]]), are highly compatible with the original ones, and are able to effectively consolidate old master paintings on canvas.
+The procedure is particularly suitable for solving the conservation problems of Neapolitan paintings on canvas of the seventeenth and eighteenth centuries, with their thick, rigid preparation layers. Indeed, the animal glues and flour—materials that have always been used for preparing canvases before applying the oil ground and the oil-bound paint layers (see {% cite 'Cerasuolo 2017' '240–41' %}; {% cite 'Véliz 1982' '50–51' %}), are highly compatible with the original ones, and are able to effectively consolidate old master paintings on canvas.
 
 Comparing the condition of many paintings in the Capodimonte Museum that have been lined in the last fifty years—as well as documented and continuously monitored—makes it possible to evaluate the positive outcome of these linings over time. In many cases this method continues to be effective, and some restorers who learned directly from De Mata and continued his practice, can still teach us much about the behavior of materials and intervention techniques. To preserve a testimony, a meeting was organized in January 2014: an interview with the restorers of that generation, recording their memories and observations, in order to capture a tradition that has been too often left unrecorded.[^15] The recovery of these procedures, insofar as they can be effective and safe, will hopefully be a task and a legacy of the new generations.
 
