--- a/content/1-history/6.md
+++ b/content/1-history/6.md
@@ -2,7 +2,7 @@
 label: "6"
 title: "Structural Conservation of Canvases in Russia from the 1960s to the Present"
 subtitle: "Evolution of Methods and Approaches"
-short_title: Structural Conservation of Canvases in Russia
+short_title: "Structural Conservation of Canvases in Russia"
 order: 60
 layout: essay
 contributor:
@@ -21,7 +21,7 @@ For a very long time after the October Socialist Revolution of 1917, conservatio
 
 These developments coincided with the advances in the chemical industry—all of which set the stage for big changes in the conservation field in Russia. Analyzing professional scientific journals published in GOSNIIR in the 1960s,[^2] we can see a deep interest in chemical research into the objects. The use of new synthetic materials for consolidation, the study of biocide agents, and the use of new conservation equipment such as vacuum hot tables were discussed. During this period worldwide experience was collected and evaluated. Some of the journal issues were devoted solely to reviewing specialized essays for museum conservation professionals.[^3]
 
-From the 1960s to the 1980s, Soviet conservators reviewed, created, and adapted structural conservation techniques, some of which were considered to be a quantum leap in our country. At that time, the most flourishing branch was on the track of choosing noninvasive methods (as they were understood then). Despite some new approaches introduced to the professional community during the Greenwich conference on comparative lining techniques ([[Villers 2003b]]), Soviet conservators would not turn away from natural materials and traditional methods. But the aim to make treatments less invasive and more reversible triggered a significant number of research projects. Such operations as tear mending, consolidation of the flaking paint layer, and improvement of deformations were reconceived in order to avoid dipping canvases in collagen adhesives and to delay lining for as long as possible.
+From the 1960s to the 1980s, Soviet conservators reviewed, created, and adapted structural conservation techniques, some of which were considered to be a quantum leap in our country. At that time, the most flourishing branch was on the track of choosing noninvasive methods (as they were understood then). Despite some new approaches introduced to the professional community during the Greenwich conference on comparative lining techniques ({% cite 'Villers 2003b' %}), Soviet conservators would not turn away from natural materials and traditional methods. But the aim to make treatments less invasive and more reversible triggered a significant number of research projects. Such operations as tear mending, consolidation of the flaking paint layer, and improvement of deformations were reconceived in order to avoid dipping canvases in collagen adhesives and to delay lining for as long as possible.
 
 ## Transformations of Traditional Lining Technique
 
@@ -35,27 +35,27 @@ The second method is based on a recipe with 2:1 ratio of dry sturgeon glue to ho
 
 Several years later these methods and their variations were included by Ivan Gorin and Zinaida Tcherkasova in chapter of a text for art colleges teaching conservation; it remained the most popular guide to practical restoration for at least 20 years ({% cite 'Gorin and Tcherkasova 1977' '126' %}). Interestingly, it also has chapters on structural treatments with wax-resin adhesives that were already falling out of practice by that time.
 
-In 1974, Larissa Yashkina made a presentation at Greenwich conference, basing her speech on a variation of the first method described above, though she offered slightly different formulations of the lining compounds and gave more technical details about the procedure ([[Yashkina 2003]]). It was a more common method at that time, and considered to be more reliable.
+In 1974, Larissa Yashkina made a presentation at Greenwich conference, basing her speech on a variation of the first method described above, though she offered slightly different formulations of the lining compounds and gave more technical details about the procedure ({% cite 'Yashkina 2003' %}). It was a more common method at that time, and considered to be more reliable.
 
-Further investigations on sturgeon-glue lining compounds were conducted in 1970s and 1980s. In 1975, Roza Yabrova presented a paper discussing some new materials for plasticizing sturgeon glue ([[Yabrova 1975]]). Her comparative research showed that such additives as polyethylene glycol (trade name PEG 600), carbamide, and sorbitol could replace natural honey, without all its problems and drawbacks. But traditions seem to extremely strong among the Russian conservators, as none of these materials were adopted in standard practice, so later research continued to focus on sturgeon-honey solutions—as well as concentrating on solving the problem of collagen glues being prone to biodeterioration ([[Nazarova 1984]]; [[Nazarova and Potapov 1984]]; [[Rebrikova 2013]]).
+Further investigations on sturgeon-glue lining compounds were conducted in 1970s and 1980s. In 1975, Roza Yabrova presented a paper discussing some new materials for plasticizing sturgeon glue ({% cite 'Yabrova 1975' %}). Her comparative research showed that such additives as polyethylene glycol (trade name PEG 600), carbamide, and sorbitol could replace natural honey, without all its problems and drawbacks. But traditions seem to extremely strong among the Russian conservators, as none of these materials were adopted in standard practice, so later research continued to focus on sturgeon-honey solutions—as well as concentrating on solving the problem of collagen glues being prone to biodeterioration ({% cite 'Nazarova 1984' %}; {% cite 'Nazarova and Potapov 1984' %}; {% cite 'Rebrikova 2013' %}).
 
 Nowadays traditional lining technique is still one of the most common methods of consolidation of original canvas supports of the paintings. But during the past ten years there has been a significant change in the whole procedure. First of all, sturgeon has become an endangered species in Russia—since 2013 it has been protected by a federal law that limits sturgeon fishing and processing. The State Research Institute for Restoration has studied rabbit-skin glue an as alternative to sturgeon glue and came to the conclusion that if used in less-concentrated solutions, rabbit-skin glue can be successfully applied to consolidate paint and ground layers and also used for lining.[^5]
 
-Moreover, there is now a trend toward reducing the amount of additives in the lining compounds. As the storage and exhibit conditions in Russian museums have generally become more stable—with balanced temperature and humidity—there is no need to add biocides and plasticizers during each treatment. Case studies demonstrate good results for paintings that were treated with collagen glue solutions without honey ([[Alyoshkina 2015]]; [[Voronina 2019]]; [[Yurovetskaya 2016]]).
+Moreover, there is now a trend toward reducing the amount of additives in the lining compounds. As the storage and exhibit conditions in Russian museums have generally become more stable—with balanced temperature and humidity—there is no need to add biocides and plasticizers during each treatment. Case studies demonstrate good results for paintings that were treated with collagen glue solutions without honey ({% cite 'Alyoshkina 2015' %}; {% cite 'Voronina 2019' %}; {% cite 'Yurovetskaya 2016' %}).
 
 ## Treatments to Postpone Lining
 
-In the 1970s and 1980s, leading studios and institutions evolved new methods of preserving linen canvases that are still widely used in conservation practice in Russia. One of the most vivid examples is a tear-mending technique developed at the State Research Institute for Restoration (GOSNIIR) in the 1970s that is still widely used by conservators throughout the country ([[Surovov and Yashkina 1979]]). It suggests that tears and cuts of the textile painting supports are treated with 5% solution of polyvinyl butyral (PVB) in ethanol or isopropanol. Saturated threads are interwoven and after drying are fixed using a hot spatula. This adhesive has been widely used in conservation practice in Russia since 1950s ([[Rumyantsev 1953]]), especially for treating murals, ceramics, and fabric painting supports. Its glass transition temperature (Tg) is approximately 60°C–70°C. “PVB films are resistant to light and heat-sealable at temperatures above 120°C.…PVB films are noted for their biostable and abrasion resistance properties as well as for good colorfastness against ultraviolet light, low static generation, and low water absorbtion” ({% cite 'Sannikova 2018' '106' %}). In 2008, the tear-mending technique was slightly extended by adjusting the method for strip-lining two-sided paintings to avoid overlaps of new margins over the paint layer ([[Yashkina and Churakova 2013]]). The working procedure has also slightly changed. Following a general trend holding that less is more, conservators tend to use less adhesive for the process: instead of saturating canvas around the tears, they just apply it to the direct spots.
+In the 1970s and 1980s, leading studios and institutions evolved new methods of preserving linen canvases that are still widely used in conservation practice in Russia. One of the most vivid examples is a tear-mending technique developed at the State Research Institute for Restoration (GOSNIIR) in the 1970s that is still widely used by conservators throughout the country ({% cite 'Surovov and Yashkina 1979' %}). It suggests that tears and cuts of the textile painting supports are treated with 5% solution of polyvinyl butyral (PVB) in ethanol or isopropanol. Saturated threads are interwoven and after drying are fixed using a hot spatula. This adhesive has been widely used in conservation practice in Russia since 1950s ({% cite 'Rumyantsev 1953' %}), especially for treating murals, ceramics, and fabric painting supports. Its glass transition temperature (Tg) is approximately 60°C–70°C. “PVB films are resistant to light and heat-sealable at temperatures above 120°C.…PVB films are noted for their biostable and abrasion resistance properties as well as for good colorfastness against ultraviolet light, low static generation, and low water absorbtion” ({% cite 'Sannikova 2018' '106' %}). In 2008, the tear-mending technique was slightly extended by adjusting the method for strip-lining two-sided paintings to avoid overlaps of new margins over the paint layer ({% cite 'Yashkina and Churakova 2013' %}). The working procedure has also slightly changed. Following a general trend holding that less is more, conservators tend to use less adhesive for the process: instead of saturating canvas around the tears, they just apply it to the direct spots.
 
-A method of stabilizing canvases by starch sizing was introduced by conservators of the Tretyakov gallery and came into common practice as a procedure for conserving canvas ([[Yushkevich 1995]]). The technique was first developed in 1970s but was not published until the mid-1990s, being constantly improved in the interim by its author, Galina Yushkevich.
+A method of stabilizing canvases by starch sizing was introduced by conservators of the Tretyakov gallery and came into common practice as a procedure for conserving canvas ({% cite 'Yushkevich 1995' %}). The technique was first developed in 1970s but was not published until the mid-1990s, being constantly improved in the interim by its author, Galina Yushkevich.
 
 Before performing the operation, the picture must be stretched on paper margins; the painting layer should be fully covered by the facing. These precautions guarantee that the canvas of the painting is kept from shrinking during treatment, which involves heat and moisture. Afterwards, the painting is put face down on a flannel or a woven felt to protect the impasto. Sizing is performed by applying a 10% starch paste on the reverse of the picture and spreading it evenly. After the paste dries a little it is delicately removed with a palette knife. The small amount of remaining starch is pressed with a warm iron. This causes the residue of the paste to be absorbed into the structure of the picture, which helps reduce canvas deformations and makes the support less responsive to changes in temperature and humidity.
 
-This method is also very effective for removing deformations, so it was adopted by many conservators and is still widely used in many studios. However, during the past few years this method has been reevaluated. Saturating canvas with starch ultimately makes the linen fibers more brittle and prone to microbiological damage. Nowadays cellulose ethers are mostly substituted for the starch; this also functions to better adsorb dust and glue residues from the canvas ([[Churakova, Karasyova, and Yurovetskaya 2018, 56]]), but such total saturation of fabric support is still questionable.
+This method is also very effective for removing deformations, so it was adopted by many conservators and is still widely used in many studios. However, during the past few years this method has been reevaluated. Saturating canvas with starch ultimately makes the linen fibers more brittle and prone to microbiological damage. Nowadays cellulose ethers are mostly substituted for the starch; this also functions to better adsorb dust and glue residues from the canvas ({% cite 'Churakova, Karasyova, and Yurovetskaya 2018' '56' %}), but such total saturation of fabric support is still questionable.
 
-In the late 1980s, another interesting technique used to stabilize canvas supports was introduced by GOSNIIR: hydrophobization of textile supports with solutions of organosilicons in isopropanol or refined gasoline ([[Malachevskaya and Yashkina 1986]]). Two coats of a 5% solution of polymethylhydrosiloxane are applied by brushing or spraying onto the reverse side of the picture sixty minutes apart. This coats the textile fibers and reduces the canvas’s response to changes in temperature and humidity. The process of polymerization is usually finished after eight to ten days of exposure, when the solvent evaporates. The properties of organosilicons (such as polymethylhydrosiloxane) still allow for later protein glue treatments, including sturgeon glue linings ([[Fedoseeva 1999, 68–69]]).
+In the late 1980s, another interesting technique used to stabilize canvas supports was introduced by GOSNIIR: hydrophobization of textile supports with solutions of organosilicons in isopropanol or refined gasoline ({% cite 'Malachevskaya and Yashkina 1986' %}). Two coats of a 5% solution of polymethylhydrosiloxane are applied by brushing or spraying onto the reverse side of the picture sixty minutes apart. This coats the textile fibers and reduces the canvas’s response to changes in temperature and humidity. The process of polymerization is usually finished after eight to ten days of exposure, when the solvent evaporates. The properties of organosilicons (such as polymethylhydrosiloxane) still allow for later protein glue treatments, including sturgeon glue linings ({% cite 'Fedoseeva 1999' '68–69' %}).
 
-Evaluating methods of hydrophobization of canvases with solutions of organosilicons seems to be a more complicated task for now. All tests performed with the samples showed very good results. According to publications on the project, treated canvases quickly repel surface moisture, do not get wet, are not prone to shrinkage and deformation, and withstand sharp increases in humidity ([[Nazarova, Malachevskaya, and Yashkina 1990]]). Moreover, the air and vapor permeability of canvases did not change ([[Malachevskaya and Yashkina 2013]]). However, when this treatment was applied to the paintings, it turned out that on some artworks the consolidation operations with water-based solutions were not as effective as they were on the untreated with organosilicon objects. Moreover, the process of degradation of polymethylhydrosiloxane is still to be investigated.
+Evaluating methods of hydrophobization of canvases with solutions of organosilicons seems to be a more complicated task for now. All tests performed with the samples showed very good results. According to publications on the project, treated canvases quickly repel surface moisture, do not get wet, are not prone to shrinkage and deformation, and withstand sharp increases in humidity ({% cite 'Nazarova, Malachevskaya, and Yashkina 1990' %}). Moreover, the air and vapor permeability of canvases did not change ({% cite 'Malachevskaya and Yashkina 2013' %}). However, when this treatment was applied to the paintings, it turned out that on some artworks the consolidation operations with water-based solutions were not as effective as they were on the untreated with organosilicon objects. Moreover, the process of degradation of polymethylhydrosiloxane is still to be investigated.
 
 ## Accepting Global Trends and Materials
 
@@ -63,21 +63,21 @@ We did not have an industry dedicated to conservation products in the former Sov
 
 GOSNIIR conducted comparative research on three acrylic dispersions: Lascaux 498 HV (Lascaux Colours & Restauro) was compared to two adhesives originally produced in Russia for coated paper and textile manufacturing. The first has the trade name ABV1B and is a copolymer of butyl acrylate, methacrylic acid, and vinyl acetate. The second has the trade name AK-243 and is a copolymer of ethyl acrylate, methacrylic acid, vinyl acetate, and acrylonitrile. Both have a working concentration of up to 50% ({% cite 'Fedoseeva et al. 2016' '98–99' %}). All three dispersions meet the general requirements for a strip-lining adhesive: to not penetrate deeply into the threads of the canvas, not cause shrinkage of the canvas, have a high adhesive capacity, and form a film with elasticity that persists over time.
 
-Results of the comparative analysis showed that the AK-243 and ABV-1B dispersions are superior to the Lascaux adhesive on a number of indicators; in particular, they penetrate less into the threads of the canvas and do not cause shrinkage ([[Fedoseeva, Malachevskaya, and Yashkina 1997' %}). Nevertheless, today the most popular adhesives for strip-lining are Beva products (Beva 371 Film or Beva D-8 Dispersion) and Lascaux 498 HV ([[Romanova 2019]]). This popularity is despite the fact that both AK-243 and ABV-1B are still produced in Russia: manufacturers sell them only in industrial-scale volumes and retailers are not interested in organizing packaging the products in smaller sizes, conservators have problems obtaining them.
+Results of the comparative analysis showed that the AK-243 and ABV-1B dispersions are superior to the Lascaux adhesive on a number of indicators; in particular, they penetrate less into the threads of the canvas and do not cause shrinkage ({% cite 'Fedoseeva, Malachevskaya, and Yashkina 1997' %}). Nevertheless, today the most popular adhesives for strip-lining are Beva products (Beva 371 Film or Beva D-8 Dispersion) and Lascaux 498 HV ({% cite 'Romanova 2019' %}). This popularity is despite the fact that both AK-243 and ABV-1B are still produced in Russia: manufacturers sell them only in industrial-scale volumes and retailers are not interested in organizing packaging the products in smaller sizes, conservators have problems obtaining them.
 
-Following international trends, in the 1990s, the Russian conservation community started to familiarize itself with synthetic materials for lining and to compare them with traditional techniques ([[Fedoseeva 1998]]). There were also some intentions to develop or adapt Russian synthetic polymers for the lining process.[^6] In the end, an understanding that the most common sturgeon glue lining has obvious drawbacks and is not suitable for all artworks led to adopting a method for treating oil paintings that has been well known for lining textiles since the 1970s, when it was introduced at the Pranas Gudynas Centre for Restoration in Lithuania.
+Following international trends, in the 1990s, the Russian conservation community started to familiarize itself with synthetic materials for lining and to compare them with traditional techniques ({% cite 'Fedoseeva 1998' %}). There were also some intentions to develop or adapt Russian synthetic polymers for the lining process.[^6] In the end, an understanding that the most common sturgeon glue lining has obvious drawbacks and is not suitable for all artworks led to adopting a method for treating oil paintings that has been well known for lining textiles since the 1970s, when it was introduced at the Pranas Gudynas Centre for Restoration in Lithuania.
 
-The method employs an acrylic adhesive with the trade name A-45-K, which is a copolymer of vinyl acetate, butyl acrylate, and acrylic acid in ethyl acetate ({Emelyanov 2004}). In a form of either a dispersion or acetone solution, it can be brushed or sprayed on a lining cloth and later activated by temperature ({% cite 'Semechkina 1993' '125' %}). Its properties are in many ways similar to Plextol and Lascaux adhesives, but choosing a local manufacturer was preferred in the 1970s, not only to support the country’s economy but also because this particular material was well-known and tested. A-45-K has not become very popular for standard lining procedures for canvases, but it showed good results in a few specific case studies.
+The method employs an acrylic adhesive with the trade name A-45-K, which is a copolymer of vinyl acetate, butyl acrylate, and acrylic acid in ethyl acetate ({% cite 'Emelyanov 2004' %}). In a form of either a dispersion or acetone solution, it can be brushed or sprayed on a lining cloth and later activated by temperature ({% cite 'Semechkina 1993' '125' %}). Its properties are in many ways similar to Plextol and Lascaux adhesives, but choosing a local manufacturer was preferred in the 1970s, not only to support the country’s economy but also because this particular material was well-known and tested. A-45-K has not become very popular for standard lining procedures for canvases, but it showed good results in a few specific case studies.
 
-One example is the lining support of the eighteenth century painting *Conclusions of Field Marshall General Count B. H. Minikh on the Seizure of Ochakov*” ([figs. 6.1a](#fig-6-1-a) and [6.1b](#fig-6-1-b)) ([[Iurovetskaia et al. 2019]]). Silk was used as a support ([fig. 6.2](#fig-6-2)), and the image layer combined oil, gold paint, and ink. Adhesive A-45-K dissolved in acetone was sprayed on the surface of the lining cloth ([fig. 6.3](#fig-6-3)) and after matching with the original support was activated locally by heat ([figs. 6.4a](#fig-6-4-a) and [6.4b](#fig-6-4-b)). Effective application of A-45-K for this art piece still has not led to widespread adoption of this technique among professional conservators because, since 2006, when this method was first introduced for lining the Mikhail Vrubel painting *Gwydon* on a sackcloth support, it has become increasingly complicated to buy the material from the manufacturers.
+One example is the lining support of the eighteenth century painting *Conclusions of Field Marshall General Count B. H. Minikh on the Seizure of Ochakov*” ([figs. 6.1a](#fig-6-1-a) and [6.1b](#fig-6-1-b)) ({% cite 'Iurovetskaia et al. 2019' %}). Silk was used as a support ([fig. 6.2](#fig-6-2)), and the image layer combined oil, gold paint, and ink. Adhesive A-45-K dissolved in acetone was sprayed on the surface of the lining cloth ([fig. 6.3](#fig-6-3)) and after matching with the original support was activated locally by heat ([figs. 6.4a](#fig-6-4-a) and [6.4b](#fig-6-4-b)). Effective application of A-45-K for this art piece still has not led to widespread adoption of this technique among professional conservators because, since 2006, when this method was first introduced for lining the Mikhail Vrubel painting *Gwydon* on a sackcloth support, it has become increasingly complicated to buy the material from the manufacturers.
 
-{% figuregroup '2' 'fig-6-1-a, fig-6-1-b' %}
+{% figuregroup '2' 'fig-6-1-a, fig-6-1-b' 'Unknown artist, *Conclusions of Field Marshall General Count B. H. Minikh to the Seizure of Ochakov*, 1737. Mixed techniques on silk, 172 x 143 сm (67 3/4 x 56 1/3 in.). (a) After removing old facings. (b) Detail. Image: © State Historical Museum, Moscow' %}
 
 {% figure 'fig-6-2' %}
 
 {% figure 'fig-6-3' %}
 
-{% figuregroup '2' 'fig-6-4-a, fig-6-4-b' %}
+{% figuregroup '2' 'fig-6-4-a, fig-6-4-b' '*Conclusions of Field Marshall Minikh*. (a) After structural treatment. (b) Detail. Image: © State Historical Museum, Moscow' %}
 
 Nowadays, restoration professionals in Russia often face difficulty accessing materials adapted for conservation purposes in our country and thus turn to reliable professional materials by internationally known suppliers. In this way, the conservation field in Russia is experiencing globalization, with all its challenges and opportunities, and mostly sticking to materials and techniques that are used worldwide. This certainly makes our work more comfortable, but it also eliminates distinctions between different conservation schools with their unique methods and approaches.
 
