Fixed spelling of Seccaroni 2012 citation
Was incorrect in paper 15; correct in bibliography.

--- a/content/3-open-questions/15.md
+++ b/content/3-open-questions/15.md
@@ -28,7 +28,7 @@ In the context of artists canvas and lining fabric, most fabrics are made from n
 
 The choice of canvas by artists is often made for pragmatic reasons, including local production, availability, expense, and size. Important features of these natural materials are their flexibility, texture, and absorbency (see “Moisture Response” below), which make them suitable for the application of paint. For fabric supports, some of these features are a product of the preparation, but most originate from the fiber type, yarn structure, and weave structure (flexibility and texture). It is reasonable to suggest that in all but the most prestigious commissions the artist had little control, or even interest, in these factors, but instead innately, or through treatises and word of mouth, thought of a canvas as either suitable or not suitable for the execution of a particular painting.
 
-The discussion below focuses on cotton and linen but acknowledges the use of silk, both in traditional non-Western and Western art and in contemporary contexts. In a few cases, it has been possible to trace the evidence of artists’ choice through letters, colormen archives, and anecdotes ({% cite 'Johnson et al. 2010' %}), but rarely has the production of the canvas been under their control. Historically cloth was a commodity for household furnishings, military and naval outfitting, and ecclesiastical and court events. It is with the advent of industrial weaving that different weights of cloth became more accessible through artists suppliers, and the small batch production of artists’ canvas started to occur. However, there is mounting evidence through technical examination and conservation records that, prior to industrialization, artists had access to different types and weaves, and in some cases clearly choose some over others ({% cite 'Heydenreich et al. 2008' %}; {% cite 'Seccarone 2012' %}). Sources, including the National Portrait Gallery’s list of British artists suppliers (1650–1950),[^2] individual websites, and publications that include research into the trade in artists’ materials ({% cite 'Kirby, Nash, and Cannon 2010' %}) provide invaluable information from which to build up a better understanding of the context in which artists chose their materials.
+The discussion below focuses on cotton and linen but acknowledges the use of silk, both in traditional non-Western and Western art and in contemporary contexts. In a few cases, it has been possible to trace the evidence of artists’ choice through letters, colormen archives, and anecdotes ({% cite 'Johnson et al. 2010' %}), but rarely has the production of the canvas been under their control. Historically cloth was a commodity for household furnishings, military and naval outfitting, and ecclesiastical and court events. It is with the advent of industrial weaving that different weights of cloth became more accessible through artists suppliers, and the small batch production of artists’ canvas started to occur. However, there is mounting evidence through technical examination and conservation records that, prior to industrialization, artists had access to different types and weaves, and in some cases clearly choose some over others ({% cite 'Heydenreich et al. 2008' %}; {% cite 'Seccaroni 2012' %}). Sources, including the National Portrait Gallery’s list of British artists suppliers (1650–1950),[^2] individual websites, and publications that include research into the trade in artists’ materials ({% cite 'Kirby, Nash, and Cannon 2010' %}) provide invaluable information from which to build up a better understanding of the context in which artists chose their materials.
 
 Contemporary artists make both conscious and pragmatic choices to use best-quality artists canvas (usually fine plain-weave linen or cheaper cotton duck, which is also available in wider widths), sacking (jute, usually plain weave), bank money bags (cotton and linen, plain or twill weave), and mattress ticking (an old favorite, usually linen with a herringbone twill weave), as well as older, traditional materials used in a contemporary context, such as bark cloth ({% cite 'Schneider 2021' %}).
 
