Fixed citation of Mecklenburg and Tumosa in paper 2
Fixed to Mecklenburg and Tumosa 1991a (there is an a and b citation)

--- a/content/1-history/2.md
+++ b/content/1-history/2.md
@@ -23,7 +23,7 @@ A fully rational approach would require that all possibly relevant information b
 
 In “Toward a Definition of the Engineering Method,” Koen defines *heuristics* as “anything that provides a plausible aid or direction in the solution of a problem but is in the final analysis unjustified, incapable of justification and fallible. It is anything that is used to guide, discover and reveal a possible, but not necessarily, correct way to solve a problem” ({% cite 'Koen 1988' '308' %}). An important comparison is given to the different approaches of the scientific and engineering methods. Koen also states that “the engineering method is the use of engineering heuristics to cause the best change in a poorly understood situation within the available resources” ({% cite 'Koen 1988' '308' %}). There is clearly a similarity between the work of a heritage conservation professional and an engineer, with respect to problem-solving under challenging circumstances with many unknowns.
 
-A pertinent example of the engineering method is found in the renowned body of research by Mecklenburg related to the mechanics of artist materials and the effects of the museum environment. In the proceedings of the 1991 Art in Transit meeting, Mecklenburg and Tumosa present findings that highlight the tensile properties of artists paints as a function of strain rate ({% cite 'Mecklenburg and Tumosa 1991' %}). In contrast, subsequent research gives descriptions of material behavior that use an elastic-plastic (time-independent) model ({% cite 'Mecklenburg 2005' %}). Strain rate is fixed to a constant value in mechanical tests to generate timely and practical information on the effects of the museum environment without the burden of viscoelastic theory.
+A pertinent example of the engineering method is found in the renowned body of research by Mecklenburg related to the mechanics of artist materials and the effects of the museum environment. In the proceedings of the 1991 Art in Transit meeting, Mecklenburg and Tumosa present findings that highlight the tensile properties of artists paints as a function of strain rate ({% cite 'Mecklenburg and Tumosa 1991a' %}). In contrast, subsequent research gives descriptions of material behavior that use an elastic-plastic (time-independent) model ({% cite 'Mecklenburg 2005' %}). Strain rate is fixed to a constant value in mechanical tests to generate timely and practical information on the effects of the museum environment without the burden of viscoelastic theory.
 
 The aim of this paper is to revisit some key concepts in the time-dependent mechanical behavior of paintings, as a supplement to fundamental knowledge of mechanics. The concepts relate to many of the treatment methods used in practice where material behavior is altered by changing different parameters. Detailed theory and test results are presented elsewhere; therefore, focus is given to generalized trends for clarity. A brief review of lining effects on stiffness and stress relaxation of painting is also provided to complement a more in-depth discussion regarding the Canadian Conservation Institute (CCI) Lining Project ({% cite 'Daly Hartin et al. 2011' %}).
 
