Fixed Macarrón, Calvo, Gil 2017 citation paper 18
Was missing the "and," which broke the pop-up

--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -134,7 +134,7 @@ The third phase of the project was to share the work by disseminating it widely 
 
 In 2012, we also presented a poster to the TechnoHeritage Congress and published some of the documentary work ({% cite 'Macarrón, Calvo, and Gil 2013' %}). The following year, at Lo Stato dell’Arte 11, Matteo Rossi-Doria presented a paper on the critical recovery of traditional lining methods ({% cite 'Rossi-Doria 2013' %}). In a similar context, an article was published comparing the lining systems used in Portugal and Spain ({% cite 'Calvo, Maltieira, and Barbosa 2014' %}).
 
-In 2014, we put forward some case studies in the Association des Restaurateurs d’Art et d’Archéologie de Formation Universitaire (ARAAFU) Colloquium in Paris ({% cite 'Macarrón, Calvo, and Gil 2014' %}; {% cite 'Macarrón, Calvo, Gil 2017' %}). That same year we also produced a poster for the Art Technological Source Research working group’s congress at ICOM-CC in Amsterdam, whose contents we published in 2016 ({% cite 'Macarrón, Calvo, and Gil 2015' %}).
+In 2014, we put forward some case studies in the Association des Restaurateurs d’Art et d’Archéologie de Formation Universitaire (ARAAFU) Colloquium in Paris ({% cite 'Macarrón, Calvo, and Gil 2014' %}; {% cite 'Macarrón, Calvo, and Gil 2017' %}). That same year we also produced a poster for the Art Technological Source Research working group’s congress at ICOM-CC in Amsterdam, whose contents we published in 2016 ({% cite 'Macarrón, Calvo, and Gil 2015' %}).
 
 The partial results of the experimental section were presented and published at the ICOM-CC in Copenhagen in 2017 (Fuster-López et. al 2017]]).
 
